--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-contrib-qunit": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-bower-task": "~0.4.0",
-    "grunt-bower-concat": "~0.4.0"
+    "grunt-bower-concat": "~0.4.0",
+    "grunt-contrib-clean": "~0.6.0"
   },
   "dependencies": {
     "grunt-qunit-serverless": "~0.3.3"
